--- a/Front-end App/DeliverItAngularProject/src/app/shop-list-product/shop-list-product.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/shop-list-product/shop-list-product.component.html
@@ -1,10 +1,10 @@
 <div class="banner-container">
-  <img class="banner-image" [src]="this.baseUrl + 'assets/' + this.shop.bannerPath" alt="banner">
+  <img class="banner-image" [src]="this.shop.bannerPath" alt="banner">
   </div>
   <div class="content-container">
     <div class="shop-data">
       <div class="image-container">
-        <img class="shop-icon" [src]="this.baseUrl + 'assets/' + this.shop.logoPath" alt="icono del local">
+        <img class="shop-icon" [src]="this.shop.logoPath" alt="icono del local">
       </div>
       <div class="info-container">
         <p class="card-title">{{this.shop.name}}</p>
