--- a/Front-end App/DeliverItAngularProject/src/app/home-customer/home-customer.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/home-customer/home-customer.component.html
@@ -26,11 +26,11 @@
         <ion-icon name="home-outline"></ion-icon>
         Cambiar dirección
       </h3>
-      <h3 class="link menu-option" routerLink="/customer-current-orders">
+      <h3 class="link menu-option" routerLink="/signup">
         <ion-icon name="lock-closed-outline"></ion-icon>
         Cambiar contraseña
       </h3>
-      <h3 class="link menu-option" routerLink="/customer-current-orders">
+      <h3 class="link menu-option" routerLink="/landing-page">
         <ion-icon name="log-out-outline"></ion-icon>
         Cerrar sesión
       </h3>
