--- a/Front-end App/DeliverItAngularProject/src/app/shop-customer/shop-customer.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/shop-customer/shop-customer.component.html
@@ -1,18 +1,10 @@
 <div class="banner-container">
-  <img
-    class="banner-image"
-    [src]="this.shop.bannerPath"
-    alt="banner"
-  />
+  <img class="banner-image" [src]="this.shop.bannerPath" alt="banner" />
 </div>
 <div class="content-container">
   <div class="shop-data">
     <div class="image-container">
-      <img
-        class="shop-icon"
-        [src]="this.shop.logoPath"
-        alt="icono del local"
-      />
+      <img class="shop-icon" [src]="this.shop.logoPath" alt="icono del local" />
     </div>
     <div class="info-container">
       <p class="card-title">{{ this.shop.name }}</p>
@@ -30,6 +22,10 @@
       </div>
     </div>
   </div>
+  <div class="extra-shop-info-container">
+    <p class="card-bottomText">Horarios: de {{ this.shop.openingTime }} a {{ this.shop.closingTime }}</p>
+    <p class="card-bottomText">Precio del envío: ${{ this.shop.shippingPrice }}</p>
+  </div>
 </div>
 <h6 class="products-title">Productos</h6>
 <div class="content-container" id="margin-0">
@@ -39,7 +35,7 @@
       [product]="product"
       title="{{ product.name }}"
       subtitle="{{ product.description }}"
-      bottomText="$ {{ product.prices[0].amount }}"
+      bottomText="${{ product.prices[0].amount }}"
       imagePath="{{ product.photoPath }}"
       [hasAddButton]="true"
     >
