--- a/Front-end App/DeliverItAngularProject/src/app/shop-reviews/shop-reviews.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/shop-reviews/shop-reviews.component.html
@@ -33,7 +33,7 @@
             <p class="card-subtitle">{{ review.stars }}</p>
             <ion-icon class="star" name="star"></ion-icon>
           </div>
-          <p class="card-subtitle">{{ review.comment }}</p>
+          <p class="comment">{{ review.comment }}</p>
         </div>
       </div>
       <ng-template #noReviews>
