--- a/Front-end App/DeliverItAngularProject/src/app/shop-reviews/shop-reviews.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/shop-reviews/shop-reviews.component.scss
@@ -68,6 +68,14 @@
   margin-bottom: 20px;
 }
 
+.comment {
+  margin-top: 5px;
+  font-family: Poppins;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 300;
+}
+
 .review > h3 {
   margin: 0;
 }
