--- a/Front-end App/DeliverItAngularProject/src/app/customer-search-results/customer-search-results.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/customer-search-results/customer-search-results.component.scss
@@ -7,7 +7,7 @@
 }
 
 .content {
-  width: 80%;
+  width: 90%;
   margin-top: 10px;
   padding: 0;
 }
@@ -18,14 +18,8 @@
   width: 250px;
 }
 
-button {
-  font-weight: 400;
-  font-size: 25px;
-  border-radius: 100px;
-  height: 50px;
-  width: 50px;
-  border: 2px solid $primary-red;
-  background-color: white;
+.arrow {
+  font-size: 40px;
 }
 
 .searchbar-container {
