--- a/Front-end App/DeliverItAngularProject/src/app/shop-list-product-variations/shop-list-product-variations.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/shop-list-product-variations/shop-list-product-variations.component.scss
@@ -1,5 +1,4 @@
-@import '../../styles.scss';
-
+@import "../../styles.scss";
 
 .banner {
   &-container {
@@ -37,7 +36,7 @@
 }
 
 .image-container {
-  width: 25%;
+  aspect-ratio: 1;
 }
 
 .info-container {
@@ -64,7 +63,7 @@
 
 .products-title {
   text-align: left;
-  margin-left: 10%;
+  margin-left: 5%;
   margin-top: 40px;
 }
 
@@ -74,7 +73,7 @@
 }
 
 .cards-container {
-  width: 80%;
+  width: 90%;
   margin-bottom: 40px;
 }
 
@@ -123,7 +122,7 @@
   background-color: #ffffff;
   border-radius: 10px;
   border: none;
-  transition: .2s;
+  transition: 0.2s;
   color: #000;
   text-align: center;
   font-family: Poppins;
