--- a/Front-end App/DeliverItAngularProject/src/app/shop-list-product/shop-list-product.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/shop-list-product/shop-list-product.component.html
@@ -1,33 +1,32 @@
 <div class="banner-container">
-  <img class="banner-image" [src]="this.shop.bannerPath" alt="banner">
-  </div>
-  <div class="content-container">
-    <div class="shop-data">
-      <div class="image-container">
-        <img class="shop-icon" [src]="this.shop.logoPath" alt="icono del local">
-      </div>
-      <div class="info-container">
-        <p class="card-title">{{this.shop.name}}</p>
-        <p class="card-subtitle">{{this.shop.street}} {{this.shop.streetNumber}}</p>
-        <div class="text-and-star-container">
-          <p class="card-bottomText">{{this.shop.stars}}</p>
-          <img class="star-image" src="..\assets\buttons_logos\star_rating_icon.png">
-          <p class="opiniones">Ver opiniones</p>
-        </div>
-      </div>
+  <img class="banner-image" [src]="this.shop.bannerPath" alt="banner" />
+</div>
+<div class="content-container">
+  <div class="shop-data">
+    <div class="image-container">
+      <img class="shop-icon" [src]="this.shop.logoPath" alt="icono del local" />
+    </div>
+    <div class="info-container">
+      <p class="card-title">{{ this.shop.name }}</p>
+      <p class="card-subtitle">
+        {{ this.shop.street }} {{ this.shop.streetNumber }}
+      </p>
+      <div class="text-and-star-container"></div>
     </div>
   </div>
-  <h6 class="products-title">Productos</h6>
-  <div class="content-container" id="margin-0">
-    <div class="cards-container">
-      <app-shop-card 
-        *ngFor="let product of products"
-          [productId]="product.id"
-          title={{product.name}}
-          subtitle={{product.description}}
-          bottomText="$ {{product.prices[0].amount}}"
-          imagePath={{product.photoPath}}
-          [hasEditButton]="true">
-      </app-shop-card>
-    </div>  
+</div>
+<h6 class="products-title">Productos</h6>
+<div class="content-container" id="margin-0">
+  <div class="cards-container">
+    <app-shop-card
+      *ngFor="let product of products"
+      [productId]="product.id"
+      title="{{ product.name }}"
+      subtitle="{{ product.description }}"
+      bottomText="${{ product.prices[0].amount }}"
+      imagePath="{{ product.photoPath }}"
+      [hasEditButton]="true"
+    >
+    </app-shop-card>
   </div>
+</div>
