--- a/Front-end App/DeliverItAngularProject/src/app/withdrawal-menu/withdrawal-menu.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/withdrawal-menu/withdrawal-menu.component.html
@@ -1,9 +1,17 @@
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+<link
+  rel="stylesheet"
+  href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+/>
+<link
+  rel="stylesheet"
+  href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+/>
 
 <nav class="navbar">
   <div class="container-menu">
-    <span class="material-symbols-outlined" routerLink="/home-delivery-boy">arrow_back</span>
+    <span class="material-symbols-outlined" routerLink="/home-delivery-boy"
+      >arrow_back</span
+    >
   </div>
 </nav>
 
@@ -11,8 +19,12 @@
 
 <div class="container">
   <div class="balance-container">
-    <h2>$ {{user.creditBalance}}</h2>
-    <app-primary-button *ngIf="user.creditBalance > 0" title="Cobrar" routerLink="/withdraw-options"></app-primary-button>
+    <h2>$ {{ user.creditBalance }}</h2>
+    <app-primary-button
+      *ngIf="user.creditBalance > 0"
+      title="Cobrar"
+      routerLink="/withdraw-options"
+    ></app-primary-button>
   </div>
 </div>
 
@@ -20,7 +32,11 @@
   <div class="options" (click)="onSeeCommissions()">
     <div class="center">
       <div class="buttons_logos">
-        <img id="plus_icon" src="assets\buttons_logos\plus_sign_icon.png" alt="plus_sign_icon">
+        <img
+          id="plus_icon"
+          src="assets\buttons_logos\plus_sign_icon.png"
+          alt="plus_sign_icon"
+        />
       </div>
       <div class="button_text">
         <p id="add_prod_text">Ver Comisiones</p>
@@ -29,12 +45,17 @@
   </div>
 </div>
 
-<h1 *ngIf="pastWithdrawals.length>0">Tus Extracciones</h1>
+<h1 *ngIf="pastWithdrawals.length > 0">Tus Extracciones</h1>
 
 <div class="container-withdraw" *ngIf="pastWithdrawals.length > 0">
-<h3 *ngFor="let withdrawal of pastWithdrawals" class="balance-container">{{withdrawal.dateTime}} | Retiro: ${{withdrawal.amount}}</h3>
+  <h3 *ngFor="let withdrawal of pastWithdrawals" class="balance-container">
+    {{ withdrawal.dateTime }} | Retiro: ${{ withdrawal.amount }}
+  </h3>
 </div>
 
-<footer *ngIf="pastWithdrawals.length>0" routerLink="/all-delivery-withdrawals">
+<footer
+  *ngIf="pastWithdrawals.length > 0"
+  routerLink="/all-delivery-withdrawals"
+>
   <span class="material-symbols-rounded expand_more">expand_more </span>
 </footer>
