--- a/Front-end App/DeliverItAngularProject/src/app/withdrawal-menu/withdrawal-menu.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/withdrawal-menu/withdrawal-menu.component.scss
@@ -1,4 +1,4 @@
-@import '../../styles.scss';
+@import "../../styles.scss";
 
 .navbar {
   margin-top: 10px;
@@ -8,11 +8,11 @@
 }
 
 .container-menu {
-    width: 25%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+  width: 25%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 .menu {
   font-size: 50px;
@@ -34,76 +34,76 @@ h3 {
   font-family: Poppins;
 }
 
- .container {
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   height: 20vh;
-   margin-left: 10%;
-   margin-right: 10%;
- }
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 20vh;
+  margin-left: 10%;
+  margin-right: 10%;
+}
 
- .balance-container {
-   border: 1px solid black;
-   justify-content: center;
-   border-radius: 10px;
-   padding: 5px;
-   width: 328px;
- }
+.balance-container {
+  border: 1px solid black;
+  justify-content: center;
+  border-radius: 10px;
+  padding: 5px;
+  width: 328px;
+}
 
- .container-withdraw {
-   display: flex;
-   flex-direction: column;
-   align-items: center;
- }
+.container-withdraw {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
- .expand_more {
-   font-size: 40px;
-   display: flex;
-   justify-content: center;
- }
+.expand_more {
+  font-size: 40px;
+  display: flex;
+  justify-content: center;
+}
 
- .options {
-   margin-bottom: 20%;
-   border-color: #d1d1d1;
-   border-radius: 20px;
-   border-style: solid;
-   border-width: 2px;
-   height: 50px;
-   display: flex;
-   align-items: center;
-   flex: 1;
- }
+.options {
+  margin-bottom: 20%;
+  border-color: #d1d1d1;
+  border-radius: 20px;
+  border-style: solid;
+  border-width: 2px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  flex: 1;
+}
 
- .center {
-   display: flex;
-   align-items: center;
-   flex: 1;
- }
+.center {
+  display: flex;
+  align-items: center;
+  flex: 1;
+}
 
- .options-container {
-   margin-top: 10%;
-   margin-left: 18%;
-   margin-right: 18%;
-   margin-bottom: 10%;
- }
+.options-container {
+  margin-top: 10%;
+  margin-left: 18%;
+  margin-right: 18%;
+  margin-bottom: 10%;
+}
 
- .buttons_logos {
-   margin-left: 5%;
-   display: flex;
- }
+.buttons_logos {
+  margin-left: 5%;
+  display: flex;
+}
 
- #plus_icon {
-   width: 35px;
-   height: 35px;
- }
+#plus_icon {
+  width: 35px;
+  height: 35px;
+}
 
- .button_text {
-   font-family: Poppins;
-   font-size: 18px;
-   font-style: normal;
-   font-weight: 500;
-   overflow: hidden;
-   margin-left: 6%;
-   padding: 2px;
- }
+.button_text {
+  font-family: Poppins;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  overflow: hidden;
+  margin-left: 6%;
+  padding: 2px;
+}
