--- a/Front-end App/DeliverItAngularProject/src/app/datos-personales/datos-personales.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/datos-personales/datos-personales.component.html
@@ -3,16 +3,26 @@
     <h1>Completar datos personales</h1>
     <div class="input-subgroup nombre">
       <h6>Nombre</h6>
-      <input formControlName="name" type="text" autofocus>
-      <div [ngClass]="{'error-message-show': getName().invalid && submitted === true}" class="error-message">
+      <input formControlName="name" type="text" autofocus />
+      <div
+        [ngClass]="{
+          'error-message-show': getName().invalid && submitted === true
+        }"
+        class="error-message"
+      >
         <span class="error-icon-red">&#9888;</span>
         Campo obligatorio
       </div>
     </div>
     <div class="input-subgroup">
       <h6>Apellido</h6>
-      <input formControlName="surname" type="text">
-      <div [ngClass]="{'error-message-show': getSurname().invalid && submitted === true}" class="error-message">
+      <input formControlName="surname" type="text" />
+      <div
+        [ngClass]="{
+          'error-message-show': getSurname().invalid && submitted === true
+        }"
+        class="error-message"
+      >
         <span class="error-icon-red">&#9888;</span>
         Campo obligatorio
       </div>
@@ -21,26 +31,42 @@
       <h6>Numero de teléfono</h6>
       <div class="group-phone-number">
         <h6 class="number-prefix">+54</h6>
-        <input formControlName="phoneNumber" type="text" class="phone-input">
+        <input formControlName="phoneNumber" type="text" class="phone-input" />
       </div>
-      <div [ngClass]="{'error-message-show': getPhoneNumber().invalid && submitted === true}" class="error-message">
+      <div
+        [ngClass]="{
+          'error-message-show': getPhoneNumber().invalid && submitted === true
+        }"
+        class="error-message"
+      >
         <span class="error-icon-red">&#9888;</span>
         Campo obligatorio
       </div>
     </div>
-    <select formControlName="idUserType" name="opcion" id="opcion" class="dropdown">      
-      <option value=0>Seleccione un tipo de Cuenta</option>
-      <option value=1>Cliente</option>
-      <option value=2>Repartidor</option>
-      <option value=3>Dueño de Local</option>
+    <select
+      formControlName="idUserType"
+      name="opcion"
+      id="opcion"
+      class="dropdown"
+    >
+      <option value="0">Seleccione un tipo de Cuenta</option>
+      <option *ngFor="let userType of userTypes" [value]="userType.id">
+        {{ userType.description }}
+      </option>
     </select>
-    <div [ngClass]="{'error-message-show': getUserTypeId().invalid && submitted === true}" class="error-message">
+    <div
+      [ngClass]="{
+        'error-message-show': getUserTypeId().invalid && submitted === true
+      }"
+      class="error-message"
+    >
       <span class="error-icon-red">&#9888;</span>
       Campo obligatorio
     </div>
-    <app-primary-button 
-    (buttonClicked)="submitForm()"
-    class="button-style" 
-    title="SIGUIENTE"></app-primary-button>
+    <app-primary-button
+      (buttonClicked)="submitForm()"
+      class="button-style"
+      title="SIGUIENTE"
+    ></app-primary-button>
   </form>
 </div>
