Add Test E2E 'client-order'

--- a/Front-end App/DeliverItAngularProject/src/app/flavours-customer-item/flavours-customer-item.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/flavours-customer-item/flavours-customer-item.component.html
@@ -1,6 +1,8 @@
-<div class="flavour">
+<div class="flavour" data-cy="add-remove-flavour">
   <div>
-    <p class="card-title">{{ productVariation.name }}</p>
+    <p class="card-title">
+      {{ productVariation.name }}
+    </p>
     <p class="card-subtitle">{{ productVariation.description }}</p>
   </div>
 
