--- a/Front-end App/DeliverItAngularProject/src/app/home-customer/home-customer.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/home-customer/home-customer.component.html
@@ -45,6 +45,7 @@
     <div class="container-searchbar">
       <app-customer-searchbar></app-customer-searchbar>
       <span
+        data-cy="side-menu-icon"
         class="material-symbols-rounded menu-open-button"
         (click)="this.sidenav.toggle()"
         >menu</span
