--- a/Front-end App/DeliverItAngularProject/src/app/shop-card/shop-card.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/shop-card/shop-card.component.html
@@ -3,12 +3,8 @@
   href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
 />
 
-<div class="container">
-  <img
-    class="image"
-    *ngIf="hasImage"
-    [src]="imagePath"
-  />
+<div class="container" [attr.prod-name]="product?.name">
+  <img class="image" *ngIf="hasImage" [src]="imagePath" />
   <div class="text-container">
     <p class="card-title">{{ title }}</p>
     <p class="card-subtitle">{{ subtitle }}</p>
@@ -23,7 +19,10 @@
     </div>
   </div>
   <div *ngIf="hasDropdown === true" class="dropdown">
-    <span class="material-symbols-outlined" (click)="showDescription()"
+    <span
+      class="material-symbols-outlined"
+      (click)="showDescription()"
+      data-cy="expand-more-icon"
       >expand_more</span
     >
   </div>
