Shop add logic added to the api and shop signup now working in front-end

--- a/Front-end App/DeliverItAngularProject/src/app/signup_shop_data/signup-shop-data1/signup-shop-data1.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/signup_shop_data/signup-shop-data1/signup-shop-data1.component.html
@@ -33,7 +33,7 @@
           <h6>Tipo de local</h6>
           <select formControlName="shopType">
               <option value="" disabled selected hidden>Seleccione un tipo de local</option>
-              <option *ngFor="let shoptype of shopTypes">{{shoptype.description}}</option>
+              <option *ngFor="let shoptype of shopTypes" [value]="shoptype.id">{{shoptype.description}}</option>
           </select>
           <div [ngClass]="{'error-message-show': getShopType().invalid && (submitted || getShopType().touched)}" class="error-message" style="align-self: flex-start;"  id="errors">
             <span class="error-icon-red">&#9888;</span>
