--- a/Front-end App/DeliverItAngularProject/src/app/shop-list-product-variations/shop-list-product-variations.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/shop-list-product-variations/shop-list-product-variations.component.scss
@@ -135,3 +135,14 @@
 .footer {
   height: 190px;
 }
+
+.button-style {
+  margin-top: 25px;
+}
+
+.button-container{
+  margin-bottom: 50px;
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+}
